--- a/mysite/templates/pages/nav.html
+++ b/mysite/templates/pages/nav.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="logo">My Portfolio</div>
+        <div class="logo">Pankaj Bansal</div>
         <ul>
             <li><a href="{% url 'home'%}">Home</a></li>
             <li><a href="{% url 'about'%}">About</a></li>
@@ -27,8 +27,7 @@
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
         });
-    </script>
+        </script>
 
 </body>
-</html>
 </html>
