--- a/mysite/templates/pages/home.html
+++ b/mysite/templates/pages/home.html
@@ -2,10 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style.css">
     <title>Document</title>
 </head>
 <body>
+{% include "pages/nav.html" %}
     this is home
+    {% include "pages/footer.html" %}
     
 </body>
 </html>
